--- a/styles/opportunities_style/opportunities.scss
+++ b/styles/opportunities_style/opportunities.scss
@@ -1,6 +1,6 @@
 .floating_section{
     // background-color: red;
-    margin-top: -116px;
+    margin-top: -70px;
     z-index: 1;
     position: relative;
     .floatr_card{
@@ -187,5 +187,69 @@
             width: 100%;
         }
         // background-color: gray;
+    }
+}
+
+.opportunities_section{
+    padding-top: 8%;
+    padding-bottom: 8%;
+    background-color: #fafafa;
+    .text{
+        text-align: center;
+        h1{
+            margin-bottom: 16px;
+        }
+        .banner--des{
+            font-size: 20px;
+            font-weight: 500;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.3;
+            letter-spacing: normal;
+            color: #e90101;   
+            margin-bottom: 46px;
+        }
+    }
+    .data_row{
+        border-radius: 15px;
+        border: solid 1px #e6e5e5;
+        background-color: #ffffff;
+        padding: 46px;
+        .list{
+
+            padding: 14px 0px;
+            background-image: linear-gradient(to right, #e6e5e5 33%, rgba(17, 7, 7, 0) 0%);
+            background-position: bottom;
+            background-size: 15px 1.6px;
+            background-repeat: repeat-x;
+            button{
+                border-radius: 6px;
+                border: solid 1px #dddddd;
+                padding: 12px 30px;
+                background-color: transparent;
+                cursor: pointer;
+                margin: auto;
+                margin-right: 0;
+            }
+            h4{
+
+                font-size: 24px;
+                font-weight: 500;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: normal;
+                letter-spacing: normal;
+                color: #272727;
+            }
+            p{
+                font-size: 18px;
+                font-weight: 500;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: normal;
+                letter-spacing: normal;
+                color: #878787;
+            }
+        }
     }
 }
