--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -37,7 +37,7 @@ $card-background-color: #FFE953;
 
 body{
     overflow-x: hidden !important;
-    user-select: none;
+    // user-select: none;
 }
 
 
