--- a/styles/opportunities_style/opportunities.scss
+++ b/styles/opportunities_style/opportunities.scss
@@ -1,3 +1,70 @@
+header {
+    position: relative;
+    background-color: black;
+    height: 100vh;
+    min-height: 25rem;
+    width: 100%;
+    overflow: hidden;
+    }
+    .team_img{
+        width: 100%;
+        position: relative;
+        top: -38vh;
+    }
+
+    header video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 0;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    }
+
+    header .container {
+    position: relative;
+    z-index: 2;
+    }
+
+    header .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3));
+    // background-color: black;
+    // opacity: 0.5;
+    z-index: 1;
+    }
+
+    @media (pointer: coarse) and (hover: none) {
+    header {
+        background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
+    }
+    header video {
+        display: none;
+    }
+    }
+
+    .active_cont{
+        display: block !important;
+        /* height: 400px !important; */
+        opacity: 1 !important;
+
+    }
+    .inactive_cont{
+        display: none !important;
+        /* height: 0px !important; */
+        opacity: 0 !important;
+    }
+
 .floating_section{
     // background-color: red;
     margin-top: -70px;
@@ -214,7 +281,9 @@
         border-radius: 15px;
         border: solid 1px #e6e5e5;
         background-color: #ffffff;
-        padding: 46px;
+        padding: 46px 46px 0px 46px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
         .list{
 
             padding: 14px 0px;
@@ -230,6 +299,11 @@
                 cursor: pointer;
                 margin: auto;
                 margin-right: 0;
+                &:hover{
+                    border: solid 1px #6455c2;
+                    background-color: #6455c2;
+                    color: #fff;
+                }
             }
             h4{
 
@@ -250,6 +324,29 @@
                 letter-spacing: normal;
                 color: #878787;
             }
+        }
+        .hiden_section_open_list{
+            overflow: hidden;
+            height: 0;
+            transition: all 0.8s;
+            // height: 520px;
+        }
+    }
+    .read_more_list{
+        display: flex;
+        padding: 24px;
+        border: solid 1px #e6e5e5;
+        background-color: #fff;
+        border-top: none;
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
+        p{
+            cursor: pointer;
+            margin: auto;
+            color: #675cd7;
+        }
+        .show_close_jop_offers{
+            display: none;
         }
     }
 }
