--- a/styles/opportunities_style/opportunities.scss
+++ b/styles/opportunities_style/opportunities.scss
@@ -9,7 +9,7 @@ header {
     .team_img{
         width: 100%;
         position: relative;
-        top: -38vh;
+        top: -24vh;
     }
 
     header video {
@@ -46,7 +46,7 @@ header {
 
     @media (pointer: coarse) and (hover: none) {
     header {
-        background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
+        background: url('../../images/team.JPG') black no-repeat center center scroll;
     }
     header video {
         display: none;
@@ -65,6 +65,19 @@ header {
         opacity: 0 !important;
     }
 
+.why_us{
+    .five_c{
+        background-color: #fff;
+        display: flex;
+        min-height: 100vh;
+        padding: 40px 16px;
+        .img_section{
+            padding-right: 40px;
+            margin: auto;
+            border-radius: 6px;
+        }
+    }
+}
 .floating_section{
     // background-color: red;
     margin-top: -70px;
@@ -115,7 +128,8 @@ header {
             letter-spacing: normal;
         }
     }
-    .row{
+    .row_s{
+        display: flex;
         background-color: #f4f9f9;
         padding-bottom: 8%;
         .container{
@@ -406,35 +420,66 @@ header {
 
 @media only screen and (max-width: 768px){
 
+    header{
+        height: unset;
+        min-height: fit-content;
+        .team_img{
+            top: 0px;
+        }
+    }
+
+    .floating_section{
+        .floatr_card{
+            h1{
+                font-size: 32px;
+            }
+            .banner--des{
+                font-size: 19px;
+            }
+        }
+    }
+
 }
 
 // Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 767px){
+    header{
+        height: unset;
+        min-height: fit-content;
+        .team_img{
+            top: 0px;
+        }
+    }
+
+    .floating_section{
+        margin-top: 0px;
+        .floatr_card{
+            padding: 12% 30px;
+            h1{
+                font-size: 34px;
+            }
+            .banner--des{
+                font-size: 18px;
+            }
+        }
+    }
 
     .life_craoyond{
-        padding-top: 10%;
+        .container{
+            padding-right: 35px;
+            padding-left: 35px;
+        }
         .text{
             margin-bottom: 160px;
             text-align: center;
-            .flag{
-                span{
-                    position: absolute;
-                    color: #fff;
-                    padding: 4px 0px 0px 16px;
+                h1{
+                    font-size: 30px;
                 }
-            }
             .description{
-                color: #878787;
-                padding-top: 16px;
-                font-size: 22px;
-                font-weight: 500;
-                font-stretch: normal;
-                font-style: normal;
-                line-height: 2;
-                letter-spacing: normal;
+                font-size: 18px;
             }
         }
-        .row{
+        .row_s{
             padding-bottom: 10%;
             .container{
                 display: flow-root;
@@ -442,9 +487,87 @@ header {
 
             .Rectangle_card_body{
                margin: auto auto 24px auto;
+               width: 100%;
+               height: 275px;
             }
         }
     }
+
+    .why_us{
+        .five_c{
+            padding: 5% 16px 0px 16px;
+            .img_section{
+                padding-right: 0px;
+            }
+            .section_content{
+                min-height: 580px !important;
+                padding-top: 30px;
+                .flag{
+                    margin: auto auto 24px auto;
+                }
+            }
+            .text_para{
+                text-align: justify;
+            }
+        }
+    }
+
+    .look_ambience{
+        padding-top: 12%;
+        padding-bottom: 8%;
+        .text{
+            text-align: center;
+            margin-bottom: 8%;
+            h1{
+                font-size: 30px;
+            }
+        }
+        .image_div{
+            padding: 3px;            
+        }
+    }
+
+    .opportunities_section{
+        padding-top: 10%;
+        padding-bottom: 10%;
+        .text{
+            h1{
+                font-size: 30px;
+            }
+            .banner--des{
+                font-size: 18px;
+            }
+        }
+        .data_row{
+            padding: 20px 20px 0px 20px;
+            .list{
+                button{
+                    padding: 8px 20px;
+                    margin: auto;
+                    margin-left: 0;
+                    font-size: 12px;
+                }
+                h4{
+                    font-size: 18px;
+                }
+                p{
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+
+    .next_billion{
+        .button_div{
+            .banner_button{
+                width: 240px;
+            }
+            .mail_us{
+                margin-right: 0px;
+                margin-bottom: 20px;
+            }
+        }
+    }    
 
 }
 
