--- a/styles/opportunities_style/opportunities.css
+++ b/styles/opportunities_style/opportunities.css
@@ -5,6 +5,9 @@ header {
   min-height: 25rem;
   width: 100%;
   overflow: hidden;
+  background-position: center;
+  background-size: cover;
+  background-image: url(../../images/team.JPG);
 }
 
 .team_img {
@@ -447,6 +450,7 @@ header .overlay {
   }
   header .team_img {
     top: 0px;
+    display: unset !important;
   }
   .floating_section .floatr_card h1 {
     font-size: 32px;
@@ -465,6 +469,7 @@ header .overlay {
   }
   header .team_img {
     top: 0px;
+    display: unset !important;
   }
   .floating_section {
     margin-top: 0px;
